# personal-assistant

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: .env.example  README.md  app.py  auth.py  database.py  lambda_handler.py  mcp_client.py  mcp_manager.py  mcp_storage.py  pyproject.toml  requirements-lambda.txt  tools.py
backend/repositories/: __init__.py  base.py  dynamodb_repository.py  factory.py  sqlite_repository.py
frontend/: .env.local.example  README.md  auth.ts  next.config.ts  package-lock.json  package.json
frontend/app/: config.ts  layout.tsx  page.tsx
frontend/app/components/: MCPSettingsDialog.tsx  UserButton.tsx
frontend/app/login/: page.tsx
frontend/types/: next-auth.d.ts
infra/: README.md  app.py  cdk.json  stack.py
