[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Flask chatbot backend with LangChain streaming support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "flask-sqlalchemy>=3.0.0",
    "mcp>=1.0.0",
    "google-auth>=2.0.0",
    "PyJWT>=2.0.0",
    "requests>=2.0.0",
]

[tool.setuptools]
py-modules = ["app", "database", "tools", "mcp_manager", "auth"]
